src/containers/dashboard/index.scss
@import 'sass/utils/_variables';

.dashboard-header {
  position: fixed;
  left: 260px;
  width: calc(100% - 260px);
}

.dashboard-content {
  // margin-top: 80px;
}

.dashboard-content__left {
  position: fixed;
  top: 0px;
  min-height: 100vh;
  height: 100vh;
  background: $color-gray-10;
}

.dashboard-content__right {
  z-index: -1;
  position: relative;
  width: calc(100% - 260px);
  min-height: calc(100vh - 80px);
  margin-left: 260px;
  margin-top: 80px;
  overflow-y: auto;
  padding: 0px 20px;
  background-color: $color-black;
  .overlay-background-container {
    position: absolute;
    top: 0px;
    bottom: 0px;
    right: 0px;
    left: 0px;
    background-color: rgba($color-black, 0.75);
  }
}

